# AI-and-Humanitities-Group-Project

./: .gitignore  Makefile  README.md  pyproject.toml  test.py
assets/diagrams/: audio_query.puml  image_query.puml  text_query.puml
src/: __init__.py  extensions.py
src/modules/chat/: ChatService.py
src/modules/root/: RootController.py
src/static/js/: chat.js
src/templates/: about.html
src/templates/includes/: header.html  sidenav.html
src/templates/layouts/: base.html
web-app/: pyproject.toml
web-app/src/: __init__.py
web-app/src/modules/chat/: ChatController.py
web-app/src/modules/chat/utils/: Analyzer.py  GeminiClient.py  ImageAnalyzer.py  SpeechToTextClient.py  VertexAi.py  config.py
web-app/src/static/css/: chat.css  style.css
web-app/src/static/js/: chat.js
web-app/src/templates/: about.html  chat.html  home.html  usage.html
web-app/src/templates/includes/: header.html  sidenav.html
web-app/src/templates/layouts/: base.html
web-app/src/utils/dev-scripts/: run.py
whatsapp-bot/: .env  README.md  main.py  pyproject.toml
whatsapp-bot/helper/: func.py
whatsapp-bot/services/: ImageAnalyzer.py  SpeechToTextClient.py  key.json
whatsapp-bot/utils/: .env  .example_env  GeminiClient.py  ImageAnalyzer.py  TwilioClient.py  VertexAi.py  config.py  func.py
